Allocated directory for project

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,7 @@
       "lib": ["es6"],
       "allowJs": true,
       "outDir": "build",
-      "rootDir": "src",
+      "rootDir": "server/src",
       "strict": true,
       "noImplicitAny": true,
       "esModuleInterop": true,
